# globalRoster

./: .gitignore  Dockerfile  README.md  SETUP_GITHUB_AND_RENDER.md  alembic.ini  init_traders_db.py  pyproject.toml  start_server.bat  start_server.ps1
global_roster/: main.py  traders.db
global_roster/core/: config.py  db.py  security.py
global_roster/models/: __init__.py  base.py  config.py  preferences.py  session.py  trader.py  trader_request.py  trader_sport_skill.py  weekly_pattern.py
global_roster/routes/: __init__.py  config.py  management.py  trader_requests.py  traders.py
global_roster/schemas/: __init__.py  config.py  trader.py  trader_request.py  weekly_pattern.py
global_roster/services/: __init__.py  availability_service.py  config_service.py  daily_resources_service.py  preferences_service.py  trader_request_service.py  trader_service.py  weekly_pattern_service.py
global_roster/static/: management.js  requests_modal.js  styles.css  trader_requests.js  traders.js  weekly_pattern.js  weekly_pattern_modal.js
global_roster/templates/: base.html  daily_resources.html  home.html  login.html  management.html  management_preferences.html  trader_bio.html  trader_form.html  trader_preferences.html  trader_requests.html  trader_weekly_pattern.html  traders.html
migrations/: README  env.py
migrations/versions/: 0388d30f07ae_create_traders_table.py  1aabfac9558b_add_location_and_sport_config_tables.py  3577bf871923_add_weekly_pattern_preference_overrides.py  45aeaec9586d_add_trader_requests_table.py  5ba7ee707e1c_remove_weekly_pattern_preference_.py  (+3 more)
(+3 files in other folders)
