[project]
name = "global-roster"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy>=2.0",
    "alembic",
    "jinja2",
    "pydantic>=2.0",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uvicorn]
factory = false
app = "global_roster.main:app"
reload = true
port = 8000

